# mdst

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: my_lib.hpp
source/: main.cpp  my_lib.cpp
tests/: CMakeLists.txt  tst_test_1.cpp  tst_test_2.cpp
